# heimdall-rs

./: .replit  Cargo.toml  README.md  replit.md
crates/server/: Cargo.toml
crates/server/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: CfgView.tsx  DecodeView.tsx  DecompileView.tsx  DisassembleView.tsx
